Fix Stories Pagination Visibility

--- a/components/real-estate-stories/_index.scss
+++ b/components/real-estate-stories/_index.scss
@@ -277,7 +277,7 @@
 
             &:not(.swiper-slide-active) {
                 .swiper-controls,
-                //.swiper-pagination,
+                .swiper-pagination,
                 .swiper-nav-container,
                 .slide-caption,
                 .book-inner {
